# algorithms

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CmakeLists.txt  Doxyfile  Makefile  README.md  ad.cmake  circle.yml  make_file_list.sh  nm.cmake  nm_test.cmake
ad/: Makefile  dual.h  dual.hpp  dual_binary_operator.h  dual_binary_operator.hpp  dual_expression.hpp  dual_unary_operator.h  dual_unary_operator.hpp  fwd.h  helper_macro.h  helper_macro.hpp  jacobian_matrix_adaptor.hpp  main.cpp  traits.hpp  type_traits.h  ublas_unary_operator.hpp  utility.cpp  utility.h  utility.hpp
ad/concept/: ublas_matrix_expression_concept.hpp
ad/detail/: dual_binary_operator_helper.h  dual_helper_function.h  dual_helper_function.hpp  dual_unary_operator_helper.h  jacobian_matrix_adaptor_helper.hpp
ad/iterator/: ConstMatrixIterator.hpp
algo/ad/: README.md  dual.hpp  dual_binary_operator.hpp  dual_binary_operator_functor.hpp  dual_expression.hpp  dual_unary_operator.hpp  dual_unary_operator_functor.hpp  fwd.hpp  helper_macro.hpp  jacobian_matrix_adaptor.hpp  main.cpp  traits.hpp  ublas_binary_operator.hpp  ublas_functional.hpp  ublas_unary_operator.hpp  util.cpp  util.hpp  utility.cpp
algo/ad_test/: DualBinaryOperatorTest.cpp  DualTest.cpp  DualUnaryOperatorTest.cpp  README.md  TestUtil.cpp  UtilTest.cpp  dual_test.cpp  dual_test.h
algo/math/: euclid.cpp
algo/nm/: ConvergenceUtil.cpp  ConvergenceUtil.h  GaussNewton.cpp  GaussNewton.h  IDumpingFactorCalculator.cpp  IDumpingFactorCalculator.h  INewtonMethod.cpp  INewtonMethod.h  LevenbergMarquardt.cpp  LevenbergMarquardt.h  NewtonRaphson.cpp  NewtonRaphson.h  SimpleDumpingFactorCalculator.cpp  SimpleDumpingFactorCalculator.h
algo/nm_test/: ConvergenceUtilTest.cpp  ConvergenceUtilTest.h  GaussNewtonTest.cpp  GaussNewtonTest.h  IDumpingFactorCalculatorTest.cpp  LevenbergMarquardtTest.cpp  LevenbergMarquardtTest.h  NewtonRaphsonTest.cpp  NewtonRaphsonTest.h  RandomNumber.h  SimpleDumpingFactorCalculatorTest.cpp  SimpleDumpingFactorCalculatorTest.h  TestData.cpp
algo/qn/: BroydenFletcherGoldfarbShanno.cpp  BroydenFletcherGoldfarbShanno.h  DavidonFeltcherPowell.cpp  DavidonFeltcherPowell.h  ExplicitLineSearcher.cpp  ExplicitLineSearcher.h  ILineSearcher.cpp  ILineSearcher.h  IQuasiNewton.cpp  IQuasiNewton.h  main.cpp  util.cpp  utility.cpp
algo/test_util/: TestData.h  gtest_helper_macro.h
algo/util/: Object.h  utility.h
algo/util_test/: matrix_operator_test.cpp  matrix_operator_test.h
algo/utility/: MixIn.h  Object.h  matrix_operator.cpp  utility.h  (+1 more)
ci/: build_cmake.sh  post_checkout.sh  run_memcheck_tests.sh  run_tests.sh
cmake/: ad.cmake  ad_test.cmake  math.cmake  nm.cmake  nm_test.cmake  qn.cmake  qn_test.cmake  test_util.cmake  util.cmake  util_test.cmake  utility.cmake  utility_test.cmake
qn/: BroydenFletcherGoldfarbShanno.cpp  BroydenFletcherGoldfarbShanno.h  DavidonFeltcherPowell.cpp  DavidonFeltcherPowell.h  ExplicitLineSearcher.cpp  ExplicitLineSearcher.h  ILineSearcher.cpp  ILineSearcher.h  IQuasiNewton.cpp  IQuasiNewton.h  Makefile  main.cpp  pre_compiled_header.h  utility.cpp  utility.h
quasi_monte_carlo/: Makefile
quasi_newton/: BroydenFletcherGoldfarbShanno.cpp  BroydenFletcherGoldfarbShanno.h  IQuasiNewton.cpp  IQuasiNewton.h  Makefile  main.cpp  utility.cpp
utility/: MixIn.h  Object.h  pre_compiled_header.h
(+50 files in other folders)
